// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/NotificationsFlyout renders a notification with the \`children\` prop 1`] = `
<div
  className="hig__flyout-v1 hig__flyout-v1--hidden hig__flyout-v1--top-left"
>
  <div
    className="hig__flyout-v1__action"
  >
    <div
      className="hig__notifications-flyout__indicator"
    >
      <button
        className="hig__icon-button hig__icon-button--transparent"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        title="View notifications"
      >
        <svg
          className="hig__icon-button__icon"
          height="24"
          viewBox="4651 1106 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4669.931 1120.406l-.112-.05c-.803-.358-.803-.358-.795-1.51l.002-.775c.008-4.383-1.382-7.12-4.023-7.952V1109c0-.495-.505-1-1-1h-2c-.495 0-1 .505-1 1v1.119c-2.653.833-4.051 3.571-4.047 7.952l.002.778c.008 1.148.008 1.148-.794 1.507l-.111.05c-1.961.878-2.049 3.592-2.052 3.7a.89.89 0 0 0 .253.656c.226.237.513.237.651.237H4660c0 1.654 1.346 3 3 3s3-1.346 3-3h5.078c.137 0 .42 0 .647-.233a.926.926 0 0 0 .256-.669c-.019-.471-.211-2.868-2.05-3.691zM4663 1127c-1.103 0-2-.897-2-2h4c0 1.103-.898 2-2 2zm-7.991-3c.04-.491.266-2.15 1.451-2.682l.11-.049c1.171-.522 1.399-.77 1.387-2.425l-.002-.774c-.002-2.838.631-6.37 3.66-7.084l.387-.091V1109h2v1.896l.386.091c3.016.71 3.643 4.244 3.638 7.083l-.002.773c-.011 1.657.218 1.904 1.389 2.427l.11.049c1.225.549 1.424 2.291 1.477 2.682h-15.991z"
          />
        </svg>
      </button>
      <div
        className="hig__notifications-flyout__indicator__count"
      >
        1
      </div>
    </div>
  </div>
  <div
    className="hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          fill="#d4dbe1"
          points="0,12 12,0 24,12"
        />
        <polygon
          fill="#fff"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="hig__flyout-v1__panel-container__inner"
      >
        <header
          className="hig__notifications-flyout__panel__title"
        >
          Notifications
        </header>
        <section
          className="hig__notifications-flyout__panel__container"
          style={
            Object {
              "maxHeight": "",
            }
          }
        >
          <div
            onScroll={undefined}
            role="list"
          >
            <div
              className="hig__notification-v1"
              role="listitem"
              style={
                Object {
                  "height": "",
                }
              }
            >
              <div
                className="hig__notification-v1__content hig__notification-v1__content--unread"
              >
                <div
                  className="hig__notification-v1__content-text"
                >
                  <div
                    className="hig__rich-text hig__rich-text--small"
                    dangerouslySetInnerHTML={undefined}
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="hig__notifications-flyout__panel__loading"
        >
          <div
            data-props="{
  \\"size\\": \\"s\\"
}"
          />
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`notifications-flyout/NotificationsFlyout renders a notification with the \`notifications\` prop 1`] = `
<div
  className="hig__flyout-v1 hig__flyout-v1--hidden hig__flyout-v1--top-left"
>
  <div
    className="hig__flyout-v1__action"
  >
    <div
      className="hig__notifications-flyout__indicator"
    >
      <button
        className="hig__icon-button hig__icon-button--transparent"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        title="View notifications"
      >
        <svg
          className="hig__icon-button__icon"
          height="24"
          viewBox="4651 1106 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4669.931 1120.406l-.112-.05c-.803-.358-.803-.358-.795-1.51l.002-.775c.008-4.383-1.382-7.12-4.023-7.952V1109c0-.495-.505-1-1-1h-2c-.495 0-1 .505-1 1v1.119c-2.653.833-4.051 3.571-4.047 7.952l.002.778c.008 1.148.008 1.148-.794 1.507l-.111.05c-1.961.878-2.049 3.592-2.052 3.7a.89.89 0 0 0 .253.656c.226.237.513.237.651.237H4660c0 1.654 1.346 3 3 3s3-1.346 3-3h5.078c.137 0 .42 0 .647-.233a.926.926 0 0 0 .256-.669c-.019-.471-.211-2.868-2.05-3.691zM4663 1127c-1.103 0-2-.897-2-2h4c0 1.103-.898 2-2 2zm-7.991-3c.04-.491.266-2.15 1.451-2.682l.11-.049c1.171-.522 1.399-.77 1.387-2.425l-.002-.774c-.002-2.838.631-6.37 3.66-7.084l.387-.091V1109h2v1.896l.386.091c3.016.71 3.643 4.244 3.638 7.083l-.002.773c-.011 1.657.218 1.904 1.389 2.427l.11.049c1.225.549 1.424 2.291 1.477 2.682h-15.991z"
          />
        </svg>
      </button>
      <div
        className="hig__notifications-flyout__indicator__count"
      >
        1
      </div>
    </div>
  </div>
  <div
    className="hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          fill="#d4dbe1"
          points="0,12 12,0 24,12"
        />
        <polygon
          fill="#fff"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="hig__flyout-v1__panel-container__inner"
      >
        <header
          className="hig__notifications-flyout__panel__title"
        >
          Notifications
        </header>
        <section
          className="hig__notifications-flyout__panel__container"
          style={
            Object {
              "maxHeight": "",
            }
          }
        >
          <div
            onScroll={undefined}
            role="list"
          >
            <div
              className="hig__notification-v1"
              role="listitem"
              style={
                Object {
                  "height": "",
                }
              }
            >
              <div
                className="hig__notification-v1__content hig__notification-v1__content--unread"
              >
                <div
                  className="hig__notification-v1__content-text"
                >
                  <div
                    className="hig__rich-text hig__rich-text--small"
                    dangerouslySetInnerHTML={undefined}
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="hig__notifications-flyout__panel__loading"
        >
          <div
            data-props="{
  \\"size\\": \\"s\\"
}"
          />
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`notifications-flyout/NotificationsFlyout renders with all props 1`] = `
<div
  className="hig__flyout-v1 hig__flyout-v1--top-left"
>
  <div
    className="hig__flyout-v1__action"
  >
    <div
      className="hig__notifications-flyout__indicator"
    >
      <button
        className="hig__icon-button hig__icon-button--transparent"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        title="World"
      >
        <svg
          className="hig__icon-button__icon"
          height="24"
          viewBox="4651 1106 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4669.931 1120.406l-.112-.05c-.803-.358-.803-.358-.795-1.51l.002-.775c.008-4.383-1.382-7.12-4.023-7.952V1109c0-.495-.505-1-1-1h-2c-.495 0-1 .505-1 1v1.119c-2.653.833-4.051 3.571-4.047 7.952l.002.778c.008 1.148.008 1.148-.794 1.507l-.111.05c-1.961.878-2.049 3.592-2.052 3.7a.89.89 0 0 0 .253.656c.226.237.513.237.651.237H4660c0 1.654 1.346 3 3 3s3-1.346 3-3h5.078c.137 0 .42 0 .647-.233a.926.926 0 0 0 .256-.669c-.019-.471-.211-2.868-2.05-3.691zM4663 1127c-1.103 0-2-.897-2-2h4c0 1.103-.898 2-2 2zm-7.991-3c.04-.491.266-2.15 1.451-2.682l.11-.049c1.171-.522 1.399-.77 1.387-2.425l-.002-.774c-.002-2.838.631-6.37 3.66-7.084l.387-.091V1109h2v1.896l.386.091c3.016.71 3.643 4.244 3.638 7.083l-.002.773c-.011 1.657.218 1.904 1.389 2.427l.11.049c1.225.549 1.424 2.291 1.477 2.682h-15.991z"
          />
        </svg>
      </button>
      <div
        className="hig__notifications-flyout__indicator__count"
      >
        44
      </div>
    </div>
  </div>
  <div
    className="hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          fill="#d4dbe1"
          points="0,12 12,0 24,12"
        />
        <polygon
          fill="#fff"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="hig__flyout-v1__panel-container__inner"
      >
        <header
          className="hig__notifications-flyout__panel__title"
        >
          Hello
        </header>
        <section
          className="hig__notifications-flyout__panel__container"
          style={
            Object {
              "maxHeight": "",
            }
          }
        >
          <div
            onScroll={[Function]}
            role="list"
          >
            <div
              className="hig__notification-v1"
              role="listitem"
              style={
                Object {
                  "height": "",
                }
              }
            >
              <div
                className="hig__notification-v1__content hig__notification-v1__content--unread"
              >
                <div
                  className="hig__notification-v1__content-text"
                >
                  <div
                    className="hig__rich-text hig__rich-text--small"
                    dangerouslySetInnerHTML={undefined}
                  />
                </div>
              </div>
            </div>
            <div
              className="hig__notification-v1"
              role="listitem"
              style={
                Object {
                  "height": "",
                }
              }
            >
              <div
                className="hig__notification-v1__content hig__notification-v1__content--unread"
              >
                <div
                  className="hig__notification-v1__content-text"
                >
                  <div
                    className="hig__rich-text hig__rich-text--small"
                    dangerouslySetInnerHTML={undefined}
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
        <footer
          className="hig__notifications-flyout__panel__loading hig__notifications-flyout__panel__loading--open"
        >
          <div
            data-props="{
  \\"size\\": \\"s\\"
}"
          />
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`notifications-flyout/NotificationsFlyout renders without props 1`] = `
<div
  className="hig__flyout-v1 hig__flyout-v1--hidden hig__flyout-v1--top-left"
>
  <div
    className="hig__flyout-v1__action"
  >
    <div
      className="hig__notifications-flyout__indicator"
    >
      <button
        className="hig__icon-button hig__icon-button--transparent"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        title="View notifications"
      >
        <svg
          className="hig__icon-button__icon"
          height="24"
          viewBox="4651 1106 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4669.931 1120.406l-.112-.05c-.803-.358-.803-.358-.795-1.51l.002-.775c.008-4.383-1.382-7.12-4.023-7.952V1109c0-.495-.505-1-1-1h-2c-.495 0-1 .505-1 1v1.119c-2.653.833-4.051 3.571-4.047 7.952l.002.778c.008 1.148.008 1.148-.794 1.507l-.111.05c-1.961.878-2.049 3.592-2.052 3.7a.89.89 0 0 0 .253.656c.226.237.513.237.651.237H4660c0 1.654 1.346 3 3 3s3-1.346 3-3h5.078c.137 0 .42 0 .647-.233a.926.926 0 0 0 .256-.669c-.019-.471-.211-2.868-2.05-3.691zM4663 1127c-1.103 0-2-.897-2-2h4c0 1.103-.898 2-2 2zm-7.991-3c.04-.491.266-2.15 1.451-2.682l.11-.049c1.171-.522 1.399-.77 1.387-2.425l-.002-.774c-.002-2.838.631-6.37 3.66-7.084l.387-.091V1109h2v1.896l.386.091c3.016.71 3.643 4.244 3.638 7.083l-.002.773c-.011 1.657.218 1.904 1.389 2.427l.11.049c1.225.549 1.424 2.291 1.477 2.682h-15.991z"
          />
        </svg>
      </button>
      <div
        className="hig__notifications-flyout__indicator__count hig__notifications-flyout__indicator__count--hide"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          fill="#d4dbe1"
          points="0,12 12,0 24,12"
        />
        <polygon
          fill="#fff"
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
    <div
      className="hig__flyout-v1__panel-container"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="hig__flyout-v1__panel-container__inner"
      >
        <header
          className="hig__notifications-flyout__panel__title"
        >
          Notifications
        </header>
        <section
          className="hig__notifications-flyout__panel__container"
          style={
            Object {
              "maxHeight": "",
            }
          }
        >
          <div
            onScroll={undefined}
            role="list"
          >
            <div
              className="hig__notification-flyout-v1__empty-state"
            >
              <test-file-stub
                className="hig__notification-flyout-v1__empty-state-image"
                role="presentation"
              />
              <p
                className="hig__notification-flyout-v1__empty-state-message"
              >
                You currently have no notifications
              </p>
            </div>
          </div>
        </section>
        <footer
          className="hig__notifications-flyout__panel__loading"
        >
          <div
            data-props="{
  \\"size\\": \\"s\\"
}"
          />
        </footer>
      </div>
    </div>
  </div>
</div>
`;
